decafcomp/llvm/test/bs_mod_small.llvm.bc.err
/usr/lib/llvm-8/bin/llvm-as: llvm/test/bs_mod_small.llvm:38:7: error: value doesn't match function result type 'i1'
  ret void
      ^
